# cuTAMP

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
cutamp/: __init__.py  algorithm.py  config.py  constraint_checker.py  cost_function.py  costs.py  costs_warp.py  experiment_logger.py  motion_solver.py  optimize_plan.py  particle_initialization.py  rollout.py  samplers.py  tamp_domain.py  tamp_world.py
cutamp/envs/assets/: blocks_5.yml  blocks_6_two_surfaces.yml  blocks_activation_dist_test.yml  obstacle_blocks_rotated_region.yml  obstacle_blocks_tight_region.yml  pick_block.yml
cutamp/robots/: __init__.py  franka.py  franka_robotiq.py  registry.py  ur5.py  utils.py
cutamp/robots/assets/: fr3_franka.urdf  fr3_franka.yml  fr3_robotiq_2f_85.urdf  fr3_robotiq_2f_85.yml  panda_robotiq_2f_85.urdf  panda_robotiq_2f_85.yml  robotiq_2f_85_gripper_spheres.pt  ur5e_robotiq_2f_85.urdf  ur5e_robotiq_2f_85.yml
cutamp/robots/assets/camera_mounts/: ur5e_camera_mount.stl
cutamp/scripts/: benchmark_kinematic_cost.py  benchmark_per_object_vs_concat.py  benchmark_sphere_overlap.py  run_cutamp.py  test_movable_to_world_fix.py  test_robot.py  test_sphere_overlap.py  utils.py  viz_spheres.py
cutamp/task_planning/: base_structs.py  constraints.py  search.py  tamp_structs.py
cutamp/utils/: common.py  obb.py  visualizer.py
docs/: profiling-analysis.md
tests/: test_cost_function.py  test_pick_only_goal.py  test_robot_registry.py  test_sphere_overlap.py  test_task_planning.py
